@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>2020</version>
+  <version>2010</version>
   <dependencies>
     <dependency>profile-Products.DataGridField:default</dependency>
     <dependency>profile-quintagroup.captcha.core:default</dependency>
